--- a/web/404.html
+++ b/web/404.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang='IT'>
 <head>
+    <title>404</title>
     <meta http-equiv='refresh' content='0; URL=http://riccardodebellini.github.io/#/404'>
 </head>
 <body>
+404 NOT FOUND
+
 Se il redirect non funziona, visita <a href="http://riccardodebellini.github.io/#/404">questa pagina</a>
 </body>
 </html>
